[package]
name = "cool_organizer"
version = "0.1.0"
authors = ["RustyStriker <avivr903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
datetime = "0.5.1"
toml = "0.5.8"
serde = "1.0.125"
serde_derive = "1.0.125"